Сетка личного проекта

--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,170 @@ body {
   font-family: "Roboto", "Arial", sans-serif;
   color: #323232;
   background-color: #849d8f;
+
+}
+
+.container {
+  width: 1200px;
+  margin: 0 auto;;
+}
+
+.main-navigation {
+  float: left;
+  width: 880px;
+}
+
+.main-navigation__logo {
+  float: left;
+  width: 154px;
+  margin-left: 21px;
+  margin-right: 10px;
+}
+
+.user-block {
+  float: right;
+  max-width: 293px;
+  margin-right: 26px;
+}
+
+.clearfix::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.hours-phone {
+  float: right;
+  max-width: 293px;
+  margin-right: 26px;
+
+}
+
+.promo-raspberries {
+  float:left;
+  width: 560px;
+  margin-right: 26px;
+  margin-left: 26px;
+  background: url("../img/raspberries.png") no-repeat;
+}
+
+.promo-chocolate {
+  float: right;
+  width: 560px;
+  margin-right: 26px;
+  background: url("../img/chocolate.png") no-repeat;
+}
+
+.promo {
+  margin-bottom: 39px;
+}
+
+.item {
+  float: left;
+  width: 267px;
+  margin-left: 26px;
+}
+
+.about {
+  width: 1146px;
+  background: #ebe0c7 url("../img/wafer.jpg") repeat;
+  border-radius: 15px;
+  margin-left: 26px;
+  margin-bottom: 40px;
+}
+
+.features-1block {
+  float:left;
+  width: 560px;
+}
+
+.features-2block {
+  float:right;
+  margin-left: 26px;
+  width: 560px;
+}
+
+.news {
+  margin-bottom: 40px;
+}
+
+.blog {
+  float: left;
+  width: 560px;
+  min-height: 220px;
+  margin-left: 26px;
+  background: url("../img/bg-strawberry.png") no-repeat;
+}
+
+.subscribe {
+  float:left;
+  width: 560px;
+  min-height: 220px;
+  margin-left: 26px;
+  background: url("../img/bg-lines.png") no-repeat;
+}
+
+.contacts {
+  position: relative;
+}
+
+.contacts-text {
+  position:absolute;
+  top:64px;
+  right:26px;
+  width: 302px;
+  margin-right: 26px;
+  background: #ffffff;
+  border-radius: 15px;
+  padding-bottom: 40px;
+}
+
+.footer {
+  margin-top: 40px;
+}
+
+.footer-social {
+  float:left;
+  width: 293px;
+  margin-left: 26px;
+}
+
+.footer-navigation {
+  float: left;
+  width: 560px;
+}
+
+.footer-copyright {
+  float:right;
+  width: 267px;
+  margin-right: 26px;
+}
+
+.row {
+  margin-bottom: 40px;
+}
+
+.pages {
+  float:right;
+  width:267px;
+  margin-top: 70px;
 }
 
 .main-navigation__list {
+  margin: 0;
+  padding: 0;
+  font-size: 0;
   list-style-type: none;
 }
 
+.main-navigation__list li {
+  display: inline-block;
+}
+
 .navigation {
+  display: block;
+  padding: 20px 15px;
+  font-size: 16px;
   font-weight: 700;
   line-height: 18px;
   text-decoration: underline;
@@ -20,11 +177,43 @@ body {
 }
 
 .navigation-active {
+  display: block;
+  padding: 7px 15px;
+  font-size: 16px;
   font-weight: 700;
   line-height: 18px;
   text-decoration: none;
   color: #ffffff;
+  background: #d07058;
+  border-radius: 15px;
 }
+
+.search, .login, .cart {
+  display: inline-block;
+  background: rgba(255,255,255,0.2);
+  border-radius: 15px;
+  margin-top: 16px;
+}
+
+.search {
+  font-size: 0;
+  width: 20px;
+  height: 16px;
+  padding: 8px 5px;
+}
+
+.login {
+  padding: 8px 10px;
+  padding-left: 40px;
+  margin-left: 10px;
+}
+
+.cart {
+  padding: 8px 40px;
+  margin-left: 10px;
+}
+
+
 
 .login,
 .cart {
@@ -91,6 +280,8 @@ body {
   font-weight: 500;
   text-decoration: underline;
   color: #ffffff;
+  text-align: center;
+  display: block;
 }
 
 .item .btn {
@@ -134,7 +325,7 @@ body {
   line-height: 20px;
 }
 
-.contacts__main {
+.contacts-text__main {
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
@@ -146,16 +337,19 @@ body {
   font-size: 18px;
   line-height: 24px;
   color: #ffffff;
+  background: #f16642;
+  border-radius: 25px;
+  padding: 10px 25px;
 }
 
-.footer__navigation__info {
+.footer-navigation__info {
   text-decoration: underline;
   font-size: 13px;
   line-height: 18px;
   color: #ffffff;
 }
 
-.footer__navigation__info-dealer {
+.footer-navigation__info-dealer {
   font-weight: 700;
   text-decoration: underline;
   font-size: 13px;
