--- a/css/style.css
+++ b/css/style.css
@@ -78,15 +78,14 @@ body {
   margin-bottom: 40px;
 }
 
-.features-1block {
+.features {
   float:left;
   width: 560px;
+  margin-right: 26px;
 }
 
-.features-2block {
-  float:right;
-  margin-left: 26px;
-  width: 560px;
+.features:last-child {
+  margin-right: 0;
 }
 
 .news {
@@ -99,6 +98,10 @@ body {
   min-height: 220px;
   margin-left: 26px;
   background: url("../img/bg-strawberry.png") no-repeat;
+}
+
+.blog__title {
+  width: 293px;
 }
 
 .subscribe {
@@ -188,8 +191,11 @@ body {
   border-radius: 15px;
 }
 
-.search, .login, .cart {
+.search,
+.login,
+.cart {
   display: inline-block;
+  vertical-align: top;
   background: rgba(255,255,255,0.2);
   border-radius: 15px;
   margin-top: 16px;
@@ -199,20 +205,46 @@ body {
   font-size: 0;
   width: 20px;
   height: 16px;
-  padding: 8px 5px;
+  padding: 7px 5px;
 }
 
 .login {
-  padding: 8px 10px;
+  padding: 7px 20px;
   padding-left: 40px;
-  margin-left: 10px;
+  margin-left: 9px;
 }
 
 .cart {
-  padding: 8px 40px;
-  margin-left: 10px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  padding-right: 35px;
+  padding-left: 42px;
+  margin-left: 9px;
 }
 
+.cart-active {
+  display: inline-block;
+  vertical-align: top;
+  background: #ffffff;
+  border-radius: 15px;
+  margin-top: 16px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  padding-right: 35px;
+  padding-left: 42px;
+  margin-left: 9px;
+}
+
+.footer-navigation__block {
+  float:left;
+  width: 185px;
+  margin-right: 20px;
+}
+
+.footer-navigation__block-info,
+.footer-navigation__block-info-dealer {
+  display:block;
+}
 
 
 .login,
@@ -342,14 +374,14 @@ body {
   padding: 10px 25px;
 }
 
-.footer-navigation__info {
+.footer-navigation__block-info {
   text-decoration: underline;
   font-size: 13px;
   line-height: 18px;
   color: #ffffff;
 }
 
-.footer-navigation__info-dealer {
+.footer-navigation__block-info-dealer {
   font-weight: 700;
   text-decoration: underline;
   font-size: 13px;
