--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,61 @@
 body {
-  min-width: 1200px;
   font-weight: 400;
   font-size: 16px;
   line-height: 22px;
   font-family: "Roboto", "Arial", sans-serif;
   color: #323232;
-  background-color: #849d8f;
-
 }
 
-.container {
-  width: 1200px;
-  margin: 0 auto;;
+.slider-controls input {
+  display: none;
+}
+
+.slide1,
+.slide2,
+.slide3 {
+  display: none;
+}
+
+.btn-preview {
+  display:none;
+}
+
+.index-wrapper {
+  min-width: 1200px;
+  background-color: #849d8f;
+  background-image: url("../img/slide-1.png");
+  background-repeat: no-repeat;
+  background-position: top center;
+}
+
+.site-wrapper {
+  min-width: 1200px;
+  background-color: #849d8f;
+}
+
+.content-wrapper {
+  width: 1146px;
+  margin: 0 auto;
+  padding: 0 27px;
+
 }
 
 .main-navigation {
   float: left;
-  width: 880px;
+  width: 720px;
 }
 
-.main-navigation__logo {
+.logo {
   float: left;
   width: 154px;
-  margin-left: 21px;
+  margin-left: -5px;
   margin-right: 10px;
+  margin-top: 10px;
 }
 
 .user-block {
   float: right;
   max-width: 293px;
-  margin-right: 26px;
 }
 
 .clearfix::after {
@@ -40,23 +66,139 @@ body {
 
 .hours-phone {
   float: right;
-  max-width: 293px;
-  margin-right: 26px;
+  max-width: 175px;
+  text-align: right;
+  font-weight: 700;
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 16px;
+  color: #ffffff;
+}
 
+.slider {
+  position: relative;
+  padding-top: 270px;
+  text-align: center;
+  color: #ffffff;
+}
+
+.slide-title {
+  width: 700px;
+  margin: 0 auto;
+  margin-bottom: 30px;
+  font-weight: 800;
+  font-size: 60px;
+  line-height: 60px;
+}
+
+.slide-btn {
+  display: inline-block;
+  padding: 12px 50px;
+  font-weight: 700;
+  font-size: 31px;
+  line-height: 41px;
+  vertical-align: top;
+  color: #ffffff;
+  text-decoration: none;
+  text-shadow: 0 2px 5px rgba(160, 32, 11, 0.76);
+  background: #f26843;
+  background:    -moz-linear-gradient(top, #f26843 0%, #e74a35 100%);
+  background: -webkit-linear-gradient(top, #f26843 0%, #e74a35 100%);
+  background:         linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
+  border-radius: 100px;
+  box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
+  border-style: none;
+}
+
+.btn {
+  display: inline-block;
+  padding: 12px 17px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  vertical-align: top;
+  color: #ffffff;
+  text-decoration: none;
+  background: #f26843;
+  background:    -moz-linear-gradient(top, #f26843 0%, #e74a35 100%);
+  background: -webkit-linear-gradient(top, #f26843 0%, #e74a35 100%);
+  background:         linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
+  border-radius: 50px;
+  border-style: none;
+}
+
+.slide-btn:hover,
+.btn:hover,
+.btn-preview:hover,
+.btn-send:hover,
+.promo__btn:hover
+ {
+  background:    -moz-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
+  background: -webkit-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
+  background:         linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
+  box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
+}
+
+.slide-btn:active,
+.btn:active,
+.btn-preview:active,
+.btn-send:active,
+.promo__btn:active {
+  background:    -moz-linear-gradient(top, #d84732 0%, #e1613e 100%);
+  background: -webkit-linear-gradient(top, #d84732 0%, #e1613e 100%);
+  background:         linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
+  box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
+}
+
+.slider-controls {
+  position: absolute;
+  bottom: 25px;
+  left: 0;
+  z-index: 20;
+  font-size: 0;
+}
+
+.slider-controls label {
+  display: inline-block;
+  width: 17px;
+  height: 17px;
+  margin-right: 8px;
+  vertical-align: top;
+  background-color: transparent;
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+
+.slider-controls input[type=radio]:checked + label {
+  background-color: #ffffff;
+}
+
+.slider-controls input[type=radio]:checked + label {
+  background-color: #ffffff;
+}
+
+input:checked ~ .slide1 {
+  display: block;
 }
 
 .promo-raspberries {
   float:left;
+  box-sizing: border-box;
+  padding: 0 20px;
+  min-height: 230px;
   width: 560px;
   margin-right: 26px;
-  margin-left: 26px;
   background: url("../img/raspberries.png") no-repeat;
 }
 
 .promo-chocolate {
   float: right;
+  box-sizing: border-box;
+  padding: 0 20px;
+  min-height: 230px;
   width: 560px;
-  margin-right: 26px;
   background: url("../img/chocolate.png") no-repeat;
 }
 
@@ -64,28 +206,124 @@ body {
   margin-bottom: 39px;
 }
 
+.catalog {
+  margin-bottom: 30px;
+}
+
 .item {
   float: left;
-  width: 267px;
-  margin-left: 26px;
+  box-sizing: border-box;
+  position:relative;
+  width: 286px;
+  padding: 10px;
+
+}
+
+.item:before {
+  position: absolute;
+  background: url("../img/sprite.png") no-repeat;
+  width: 61px;
+  height: 61px;
+  background-position: -45px -62px;
+  content: "";
+}
+
+}
+
+.item:last-child {
+  margin-right: 0;
+}
+
+.item:hover {
+  background: rgba(255,255,255,0.2);
+  box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.08);
+  border-radius: 10px;
+}
+
+.item:hover .btn-preview  {
+  display: block;
+  position:absolute;
+  margin-top: 10px;
+  margin-left: 35px;
+  margin-bottom: 15px;
+  padding: 12px 17px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 24px;
+  vertical-align: top;
+  color: #ffffff;
+  text-decoration: none;
+  background: #f26843;
+  background:    -moz-linear-gradient(top, #f26843 0%, #e74a35 100%);
+  background: -webkit-linear-gradient(top, #f26843 0%, #e74a35 100%);
+  background:         linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
+  border-radius: 50px;
+  border-style: none;
 }
 
 .about {
   width: 1146px;
+  min-height: 305px;
   background: #ebe0c7 url("../img/wafer.jpg") repeat;
   border-radius: 15px;
-  margin-left: 26px;
   margin-bottom: 40px;
+  box-sizing: border-box;
+  padding: 1px 20px;
 }
 
 .features {
+  position:relative;
   float:left;
-  width: 560px;
-  margin-right: 26px;
+  width: 485px;
+  margin-left: 60px;
 }
 
-.features:last-child {
-  margin-right: 0;
+.features-content-right {
+  margin-left: 15px;
+}
+
+.icon-ice:before {
+  position: absolute;
+  top: 0;
+  left: -60px;
+  background: url("../img/sprite.png") no-repeat;
+  width: 49px;
+  height: 49px;
+  background-position: -138px -131px;
+  content: "";
+}
+
+.icon-leaf:before {
+  position: absolute;
+  top: 85pxf;
+  left: -60px;
+  background: url("../img/sprite.png") no-repeat;
+  width: 49px;
+  height: 49px;
+  background-position: -226px -10px;
+  content: "";
+}
+
+.icon-cow:before {
+  position: absolute;
+  top: 0;
+  left: -40px;
+  background: url("../img/sprite.png") no-repeat;
+  width: 48px;
+  height: 49px;
+  background-position: -126px -62px;
+  content: "";
+}
+
+.icon-temperature:before {
+  position: absolute;
+  top: 85px;
+  left: -40px;
+  background: url("../img/sprite.png") no-repeat;
+  width: 48px;
+  height: 49px;
+  background-position: -207px -79px;
+  content: "";
 }
 
 .news {
@@ -94,9 +332,10 @@ body {
 
 .blog {
   float: left;
+  box-sizing: border-box;
   width: 560px;
+  padding: 1px 20px;
   min-height: 220px;
-  margin-left: 26px;
   background: url("../img/bg-strawberry.png") no-repeat;
 }
 
@@ -106,10 +345,27 @@ body {
 
 .subscribe {
   float:left;
+  box-sizing: border-box;
   width: 560px;
+  padding: 20px 20px;
   min-height: 220px;
   margin-left: 26px;
   background: url("../img/bg-lines.png") no-repeat;
+}
+
+.email {
+  display: inline-block;
+  width: 100px;
+}
+
+.email-input input {
+  padding: 10px;
+  border: 1px solid #34495e;
+  border-radius: 5px;
+}
+
+.btn-send {
+  display: inline-block;
 }
 
 .contacts {
@@ -118,13 +374,23 @@ body {
 
 .contacts-text {
   position:absolute;
+  box-sizing: border-box;
   top:64px;
-  right:26px;
+  right:0px;
   width: 302px;
-  margin-right: 26px;
+  min-height: 305px;
   background: #ffffff;
   border-radius: 15px;
-  padding-bottom: 40px;
+  padding: 10px 25px;
+}
+
+.contacts-adress {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.map {
+  margin-left: -26px;
 }
 
 .footer {
@@ -133,19 +399,90 @@ body {
 
 .footer-social {
   float:left;
-  width: 293px;
-  margin-left: 26px;
+  width: 420px;
+  min-height: 85px;
+}
+
+.social-btn {
+  font-size: 0;
+  display: inline-block;
+  width: 32px;
+  height: 32px;
+  margin-right: 6px;
+  border:5px solid rgba(255, 255, 255, 0.5);
+  border-radius: 45px;
+  position: relative;
+}
+
+.social-btn:hover {
+  border:5px solid rgba(255, 255, 255, 1);
+}
+
+.social-btn:active {
+  border:5px solid rgba(255, 255, 255, 0.5);
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.5);
+
+}
+
+.social-btn:after {
+  position: absolute;
+  background: url("../img/sprite.png") no-repeat;
+  content: "";
+}
+
+.social-btn:hover:after {
+  opacity: 1;
+}
+
+.social-btn-tw:after {
+  width: 32px;
+  height: 32px;
+  background-position: -259px -153px;
+  opacity: 0.8;
+}
+
+.social-btn-inst:after {
+  width: 32px;
+  height: 32px;
+  background-position: -207px -148px;
+  opacity: 0.8;
+}
+
+.social-btn-fb:after {
+  width: 32px;
+  height: 32px;
+  background-position: -174px -10px;
+  opacity: 0.8;
+}
+
+.social-btn-vk:after {
+  width: 32px;
+  height: 32px;
+  background-position: -10px -205px;
+  opacity: 0.8;
 }
 
 .footer-navigation {
   float: left;
-  width: 560px;
+  width: 360px;
 }
 
 .footer-copyright {
   float:right;
-  width: 267px;
-  margin-right: 26px;
+  position: relative;
+  width: 190px;
+  padding-top: 20px;
+}
+
+.footer-copyright:before {
+  position: absolute;
+  background: url("../img/sprite.png") no-repeat;
+  content: "";
+  top: -20px;
+  width: 108px;
+  height: 38px;
+  background-position: -10px -143px;
+
 }
 
 .row {
@@ -171,7 +508,7 @@ body {
 
 .navigation {
   display: block;
-  padding: 20px 15px;
+  padding: 29px 15px;
   font-size: 16px;
   font-weight: 700;
   line-height: 18px;
@@ -198,7 +535,7 @@ body {
   vertical-align: top;
   background: rgba(255,255,255,0.2);
   border-radius: 15px;
-  margin-top: 16px;
+  margin-top: 23px;
 }
 
 .search {
@@ -235,15 +572,32 @@ body {
   margin-left: 9px;
 }
 
-.footer-navigation__block {
+.footer-navigation__block-left {
   float:left;
-  width: 185px;
+  width: 135px;
   margin-right: 20px;
+}
+
+.footer-navigation__block-right {
+  float:left;
+  width: 170px;
 }
 
 .footer-navigation__block-info,
 .footer-navigation__block-info-dealer {
+  position: relative;
   display:block;
+}
+
+.footer-navigation__block-info-dealer:before {
+  position: absolute;
+  top: 2px;
+  left: -22px;
+  background: url("../img/sprite.png") no-repeat;
+  width: 15px;
+  height: 13px;
+  background-position: -10px -62px;
+  content: "";
 }
 
 
@@ -264,15 +618,6 @@ body {
   color: #323232;
 }
 
-.hours-phone {
-  text-align: right;
-  font-weight: 700;
-  text-decoration: none;
-  font-size: 14px;
-  line-height: 16px;
-  color: #ffffff;
-}
-
 .phone {
   font-size: 22px;
   line-height: 24px;
@@ -281,7 +626,6 @@ body {
 .promo__title {
   font-weight: 700;
   font-size: 35px;
-  line-height: 41px;
   color: #ffffff;
 }
 
@@ -292,14 +636,27 @@ body {
 }
 
 .promo__btn {
+  float: right;
+  margin-top: 15px;
+  padding: 12px 17px;
   font-weight: 700;
-  text-decoration: none;
   font-size: 18px;
   line-height: 24px;
+  vertical-align: top;
   color: #ffffff;
+  text-decoration: none;
+  background: #f26843;
+  background:    -moz-linear-gradient(top, #f26843 0%, #e74a35 100%);
+  background: -webkit-linear-gradient(top, #f26843 0%, #e74a35 100%);
+  background:         linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
+  border-radius: 50px;
+  border-style: none;
 }
 
 .item-price {
+  position: absolute;
+  top: 215px;
+  left: 10px;
   font-weight: 700;
   text-decoration: none;
   font-size: 45px;
@@ -314,14 +671,6 @@ body {
   color: #ffffff;
   text-align: center;
   display: block;
-}
-
-.item .btn {
-  font-weight: 700;
-  text-decoration: none;
-  font-size: 18px;
-  line-height: 24px;
-  color: #ffffff;
 }
 
 .about__title {
@@ -358,21 +707,21 @@ body {
 }
 
 .contacts-text__main {
+  display: block;
+  margin-bottom: 20px;
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
 }
 
-.contacts .btn {
-  text-decoration: none;
+.contacts-text__phone {
+  display: block;
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
-  color: #ffffff;
-  background: #f16642;
-  border-radius: 25px;
-  padding: 10px 25px;
 }
+
+
 
 .footer-navigation__block-info {
   text-decoration: underline;
