--- a/css/style.css
+++ b/css/style.css
@@ -533,22 +533,63 @@ input:checked ~ .slide1 {
 .cart {
   display: inline-block;
   vertical-align: top;
-  background: rgba(255,255,255,0.2);
+  background: rgba(255, 255, 255, 0.2);
   border-radius: 15px;
   margin-top: 23px;
 }
 
 .search {
+  position: relative;
   font-size: 0;
   width: 20px;
   height: 16px;
   padding: 7px 5px;
 }
 
+.search:hover {
+  background: rgba(255, 255, 255, 1);
+}
+
+.search:before {
+  position: absolute;
+  background: url("../img/sprite.png") no-repeat;
+  width: 17px;
+  height: 17px;
+  left: 6px;
+  top:6px;
+  background-position: -275px -79px;
+  content: "";
+}
+
+.search:hover:before {
+  background-position: -275px -116px;
+}
+
 .login {
   padding: 7px 20px;
   padding-left: 40px;
   margin-left: 9px;
+  position: relative;
+}
+
+.login:hover {
+  color: #373737;
+  background: rgba(255, 255, 255, 1);
+}
+
+.login:before {
+  position: absolute;
+  background: url("../img/sprite.png") no-repeat;
+  width: 21px;
+  height: 19px;
+  left: 13px;
+  top: 6px;
+  background-position: -92px -10px;
+  content: "";
+}
+
+.login:hover:before {
+  background-position: -133px -10px;
 }
 
 .cart {
@@ -557,6 +598,27 @@ input:checked ~ .slide1 {
   padding-right: 35px;
   padding-left: 42px;
   margin-left: 9px;
+  position: relative;
+}
+
+.cart:hover {
+  background: rgba(255, 255, 255, 1);
+  color: #373737;
+}
+
+.cart:before {
+  position: absolute;
+  background: url("../img/sprite.png") no-repeat;
+  width: 21px;
+  height: 20px;
+  left: 14px;
+  top: 6px;
+  background-position: -10px -10px;
+  content: "";
+}
+
+.cart:hover:before {
+  background-position: -51px -10px;
 }
 
 .cart-active {
@@ -618,9 +680,16 @@ input:checked ~ .slide1 {
   color: #323232;
 }
 
+.hours {
+  display: block;
+  margin-top: 20px;
+}
+
 .phone {
+  display:block;
   font-size: 22px;
   line-height: 24px;
+  margin-top: 5px;
 }
 
 .promo__title {
