--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,11 @@ body {
   color: #323232;
 }
 
+a:hover,
+a:active {
+  color: #ffbc9e;
+}
+
 .slider-controls input {
   display: none;
 }
@@ -14,10 +19,6 @@ body {
 .slide2,
 .slide3 {
   display: none;
-}
-
-.btn-preview {
-  display:none;
 }
 
 .index-wrapper {
@@ -56,6 +57,7 @@ body {
 .user-block {
   float: right;
   max-width: 293px;
+  margin-top: 23px;
 }
 
 .clearfix::after {
@@ -128,26 +130,21 @@ body {
 }
 
 .slide-btn:hover,
-.btn:hover,
-.btn-preview:hover,
-.btn-send:hover,
-.promo__btn:hover
- {
+.btn:hover {
   background:    -moz-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
   background: -webkit-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
   background:         linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
   box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
+  color: #ffffff;
 }
 
 .slide-btn:active,
-.btn:active,
-.btn-preview:active,
-.btn-send:active,
-.promo__btn:active {
+.btn:active {
   background:    -moz-linear-gradient(top, #d84732 0%, #e1613e 100%);
   background: -webkit-linear-gradient(top, #d84732 0%, #e1613e 100%);
   background:         linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
   box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
+  color: #fceeec;
 }
 
 .slider-controls {
@@ -238,27 +235,19 @@ input:checked ~ .slide1 {
   background: rgba(255,255,255,0.2);
   box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.08);
   border-radius: 10px;
+  padding-bottom: 90px;
+}
+
+.btn-preview {
+  display:none;
 }
 
 .item:hover .btn-preview  {
   display: block;
   position:absolute;
-  margin-top: 10px;
+  margin-top: 25px;
   margin-left: 35px;
   margin-bottom: 15px;
-  padding: 12px 17px;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 24px;
-  vertical-align: top;
-  color: #ffffff;
-  text-decoration: none;
-  background: #f26843;
-  background:    -moz-linear-gradient(top, #f26843 0%, #e74a35 100%);
-  background: -webkit-linear-gradient(top, #f26843 0%, #e74a35 100%);
-  background:         linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
-  border-radius: 50px;
-  border-style: none;
 }
 
 .about {
@@ -339,10 +328,6 @@ input:checked ~ .slide1 {
   background: url("../img/bg-strawberry.png") no-repeat;
 }
 
-.blog__title {
-  width: 293px;
-}
-
 .subscribe {
   float:left;
   box-sizing: border-box;
@@ -354,6 +339,8 @@ input:checked ~ .slide1 {
 }
 
 .email-input {
+  box-sizing: border-box;
+  height: 44px;
   border: none;
   display: inline-block;
   vertical-align: top;
@@ -401,7 +388,7 @@ input:checked ~ .slide1 {
 
 .footer-social {
   float:left;
-  width: 420px;
+  width: 290px;
   min-height: 85px;
 }
 
@@ -467,6 +454,7 @@ input:checked ~ .slide1 {
 .footer-navigation {
   float: left;
   width: 360px;
+  margin-left: 130px;
 }
 
 .footer-copyright {
@@ -547,26 +535,24 @@ input:checked ~ .slide1 {
   border-radius: 15px;
 }
 
-.search,
-.login,
-.cart {
+.user-block__item {
   display: inline-block;
   vertical-align: top;
+  position: relative;
   background: rgba(255, 255, 255, 0.2);
   border-radius: 15px;
-  margin-top: 23px;
+}
+
+.user-block__item:hover {
+  color: #373737;
+  background: rgba(255, 255, 255, 1);
 }
 
 .search {
-  position: relative;
   font-size: 0;
   width: 20px;
   height: 16px;
   padding: 7px 5px;
-}
-
-.search:hover {
-  background: rgba(255, 255, 255, 1);
 }
 
 .search:before {
@@ -588,12 +574,6 @@ input:checked ~ .slide1 {
   padding: 7px 20px;
   padding-left: 40px;
   margin-left: 9px;
-  position: relative;
-}
-
-.login:hover {
-  color: #373737;
-  background: rgba(255, 255, 255, 1);
 }
 
 .login:before {
@@ -617,12 +597,6 @@ input:checked ~ .slide1 {
   padding-right: 35px;
   padding-left: 42px;
   margin-left: 9px;
-  position: relative;
-}
-
-.cart:hover {
-  background: rgba(255, 255, 255, 1);
-  color: #373737;
 }
 
 .cart:before {
@@ -726,19 +700,6 @@ input:checked ~ .slide1 {
 .promo__btn {
   float: right;
   margin-top: 15px;
-  padding: 12px 17px;
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 24px;
-  vertical-align: top;
-  color: #ffffff;
-  text-decoration: none;
-  background: #f26843;
-  background:    -moz-linear-gradient(top, #f26843 0%, #e74a35 100%);
-  background: -webkit-linear-gradient(top, #f26843 0%, #e74a35 100%);
-  background:         linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
-  border-radius: 50px;
-  border-style: none;
 }
 
 .item-price {
@@ -771,11 +732,21 @@ input:checked ~ .slide1 {
   font-weight: 500;
 }
 
+
+
 .blog__title {
+  display: inline-block;
+  vertical-align: top;
+  width: 293px;
   font-weight: 700;
   text-decoration: underline;
+  color: #323232;
   font-size: 24px;
   line-height: 30px;
+}
+
+.blog__title:hover {
+  color: #e84d37;
 }
 
 .subscribe {
